--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>This project has some files already</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quam illo laboriosam ut. Sed, modi deserunt sit quisquam nihil numquam eos, eum explicabo at, vitae quasi libero quae totam debitis.</p>
     
 </body>
 </html>
