--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <h1>This project has some files already</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quam illo laboriosam ut. Sed, modi deserunt sit quisquam nihil numquam eos, eum explicabo at, vitae quasi libero quae totam debitis.</p>
-    
+    <h3>Projets</h3>
+    <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+    </ul>
 </body>
 </html>
